--- a/Mobile/Mobile.csproj
+++ b/Mobile/Mobile.csproj
@@ -43,5 +43,8 @@
     <EmbeddedResource Update="TimePage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="TripsTrapsTrullPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
