--- a/Mobile.Android/Mobile.Android.csproj
+++ b/Mobile.Android/Mobile.Android.csproj
@@ -95,5 +95,11 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\smile.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\krest.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\noll.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
