List_page baza Done, нужно сделать задание.

--- a/Mobile/Mobile.csproj
+++ b/Mobile/Mobile.csproj
@@ -32,6 +32,9 @@
     <EmbeddedResource Update="FramePage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="List_page.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="lumememm.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
