--- a/Mobile.Android/Mobile.Android.csproj
+++ b/Mobile.Android/Mobile.Android.csproj
@@ -116,5 +116,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\samsung.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\defaultRayan.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
